@@ -1,13 +1,9 @@
-# Port specification for the mcs51 port running with uCsim
+# Port specification for the mcs51-stack-auto port running with uCsim
 #
 # model small stack-auto
 
 SDCCFLAGS +=--stack-auto
 
-include $(PORTS_DIR)/mcs51/spec.mk
-
-# use C sources from mcs51
-$(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/mcs51/%.c
-	$(SDCC) $(SDCCFLAGS) -c $< -o $@
+include $(PORTS_DIR)/mcs51-common/spec.mk
 
 LIBDIR = $(top_builddir)/device/lib/build/small-stack-auto
